fix label and html

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
           <ul class="checklist">
             <li>
               <label for="validation-besoins">
-                <input type="checkbox" id="validation-besoins" title="Validation des besoins" aria-label="Validation des besoins avec les parties prenantes">
+                <input type="checkbox" id="validation-besoins" title="Validation des besoins" aria-label="Validation des besoins avec les parties prenantes (client/clientes - dev - produit …)">
                 <span>Validation des besoins avec les parties prenantes (client/clientes - dev - produit …)</span>
               </label>
             </li>
@@ -590,7 +590,7 @@
             </li>
             <li>
               <label for="integration-api">
-                <input type="checkbox" id="integration-api" title="Mécanismes d'intégration" aria-label="Mécanismes d'intégration et d'interopérabilité">
+                <input type="checkbox" id="integration-api" title="Mécanismes d'intégration" aria-label="Mécanismes d'intégration et d'interopérabilité (api rest, soap, graphql etc … format json, xml etc …)">
                 <span>Mécanismes d'intégration et d'interopérabilité (api rest, soap, graphql etc … format json, xml etc …)</span>
               </label>
             </li>
@@ -631,14 +631,14 @@
               </label>
             </li>
           </ul>
-        </div>
+        </div>Validation des besoins
 
         <div class="section">
           <h3>Accès aux données</h3>
           <ul class="checklist">
             <li>
               <label for="strategie-acces">
-                <input type="checkbox" id="strategie-acces" title="Stratégie d'accès" aria-label="Stratégie d'accès aux données">
+                <input type="checkbox" id="strategie-acces" title="Stratégie d'accès" aria-label="Stratégie d'accès aux données (ORM, DAO, Repository)">
                 <span>Stratégie d'accès aux données (ORM, DAO, Repository)</span>
               </label>
             </li>
